se agregó la logica de eliminar tarea y la función mostrar contenido de la tabla un vez que se elimina un item

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               class="d-flex flex-wrap justify-content-center"
               id="container-cards"
             >
-              <div class="table-responsive">
+              <div id="tablaTarea" class="table-responsive">
                 <table class="table">
                   <thead id="cabeceraTabla" class="d-none">
                     <tr>
