--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class="container">
       <nav class="navbar navbar-expand-lg bg-body-tertiary m-3">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Inicio</a>
+          <a class="navbar-brand fs-5" href="#">Inicio</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -42,22 +42,11 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
+                <a class="nav-link active fs-4" aria-current="page" href="#"
                   >Lista de tareas</a
                 >
               </li>
             </ul>
-            <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Buscar tareas"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Buscar
-              </button>
-            </form>
           </div>
         </div>
       </nav>
@@ -114,6 +103,7 @@
         </div>
       </section>
     </main>
+
     <footer class="bg-dark text-center text-light py-3">
       <p>&copy; Todos los derechos reservados</p>
     </footer>
