se agregó padding y margin al contenido del Modal, se agregó la funcion agregarEliminarModal

--- a/index.html
+++ b/index.html
@@ -132,9 +132,7 @@
             id="modal-body"
             class="modal-body alert alert-primary"
             role="alert"
-          >
-            efsfe
-          </div>
+          ></div>
           <div class="modal-footer">
             <button
               type="button"
